<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

  <include layout="@layout/toolbar_inverted_layout" />

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

    <android.support.v7.widget.RecyclerView
      android:id="@+id/messages_recycler_view"
      style="@style/Chat.RecyclerView"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />

    <LinearLayout
      style="@style/Chat.NewMessage.Layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom"
      android:layout_marginBottom="@dimen/chat_new_message_margin"
      android:layout_marginEnd="@dimen/chat_new_message_margin"
      android:layout_marginStart="@dimen/chat_new_message_margin"
      android:orientation="horizontal">

      <EditText
        android:id="@+id/message_edit"
        style="@style/Chat.NewMessage.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

      <ImageView
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/chat_new_message_margin"
        android:src="@drawable/ic_send" />

    </LinearLayout>

  </FrameLayout>

</merge>
