<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <LinearLayout
    style="@style/Chat.Message.Metadata"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/message_author_name"
      style="@style/Chat.Message.Author"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

    <TextView
      android:id="@+id/message_time"
      style="@style/Chat.Message.Time"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

  </LinearLayout>

  <RelativeLayout
    style="@style/Chat.Message.BodyLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:id="@+id/message_author_image"
      style="@style/Chat.Message.Photo"
      android:layout_width="@dimen/chat_message_author_image"
      android:layout_height="@dimen/chat_message_author_image"
      android:layout_alignParentStart="true" />

    <TextView
      android:id="@+id/message_body"
      style="@style/Chat.Message.Body"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignTop="@id/message_author_image"
      android:layout_marginStart="@dimen/chat_message_body_margin"
      android:layout_toEndOf="@id/message_author_image" />

  </RelativeLayout>

</merge>
