<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/manageOwners"
    android:title="@string/add_users"
    android:icon="@drawable/ic_person_add"
    app:showAsAction="ifRoom"
    android:visible="false"
    />
</menu>
